--- a/amigurumi/index.html
+++ b/amigurumi/index.html
@@ -123,7 +123,7 @@
                     <div id="descricao">
                         <p>Feita com fio pelúcia. Um fio super fofo e macio.<br>(Preço por tamanho)</p>
                     </div>
-                    <h3>R$ 140,00(25cm)</h3>
+                    <h3>R$ 200,00(30cm)</h3>
                 </section>
                 <section class="cards">
                     <div class="icon"><img src="../fotos_croche/ami_cachorro.png" alt="dino"></div>
@@ -156,7 +156,8 @@
                         <p>Feito com fio ecológico, essa naninha é uma ótima companheira para os pequeninos.<br>(<strong>IMAGEM ILUSTRATIVA!</strong><br>Aceito variações)</p>
                     </div>
                     <h3>R$ 80,00</h3>
-                </section><section class="cards">
+                </section>
+                <section class="cards">
                     <div class="icon"><img src="../fotos_croche/ami_terco.png" alt="dino"></div>
                     <span>Terco de Porta</span>
                     <div id="descricao">
@@ -164,14 +165,14 @@
                     </div>
                     <h3>R$ 25,00</h3>
                 </section>
-                </section><section class="cards">
+                <section class="cards">
                     <div class="icon"><img src="../fotos_croche/ami_ursoazul.png" alt="dino"></div>
                     <span>Urso Blueberry</span>
                     <div id="descricao">
                         <p>Feito com fio pelúcia que é super macio, esse urso é ótimo para dar de presente para quem você mais gosta!</p>
                     </div>
                     <h3>R$ 35,00</h3>
-                </section>
+                </section> 
             </div>
         </div>
     </main>
