--- a/roupas/index.html
+++ b/roupas/index.html
@@ -86,19 +86,19 @@
             <div class="conteudo">
                 <section class="cards">
                     <div class="icon"><img src="../fotos_croche/roupa_top.png" alt="gato"></div>
-                    <span>Almofagata</span>
+                    <span>Bolero Florido</span>
                     <div id="descricao">
-                        <p>Almofagata feita de suor fedido e lagrimas de orgulho</p>
+                        <p></p>
                     </div>
                     <h3>R$ 500,00</h3>
                 </section>
                 <section class="cards">
                     <div class="icon"><img src="../fotos_croche/roupa_vestido.png" alt="caquin"></div>
-                    <span>Tartaruga</span>
+                    <span>Saida de Praia/Vestido</span>
                     <div id="descricao">
-                        <p>Almofagata feita de suor fedido e lagrimas de orgulho</p>
+                        <p>Feito com barbante 6. Este vestido/saida contem uma otima modelagem para o corpo.(Informe suas medidas)  </p>
                     </div>
-                    <h3>R$ 500,00</h3>
+                    <h3>R$ 230,00</h3>
                 </section>
                 
             </div>
