--- a/amigurumi/index.html
+++ b/amigurumi/index.html
@@ -89,9 +89,9 @@
                     <div class="icon"><img src="../fotos_croche/ami_gata.png" alt="almofagata"></div>
                     <span>Almofagata</span>
                     <div id="descricao">
-                        <p>Personagem do desenho infantil "Casa da Gabi", feita com fio ecológico.<br>(<Strong>IMAGEM ILUSTRATIVA!</Strong><BR>Preço varia pelo tamanho) </p>
+                        <p>Personagem do desenho infantil "Casa da Gabi", feita com fio ecológico.<br>(<Strong>IMAGEM ILUSTRATIVA!</Strong><BR>Preço varia pelo tamanho(20cm)) </p>
                     </div>
-                    <h3>R$ 150 a 170 (20cm)</h3>
+                    <h3>R$ 170,00 </h3>
                 </section>
                 <section class="cards">
                     <div class="icon"><img src="../fotos_croche/ami_tartle.jpg" alt="tartaruga"></div>
@@ -105,9 +105,9 @@
                     <div class="icon"><img src="../fotos_croche/ami_dino.png" alt="dinossauro"></div>
                     <span>Dinossauro</span>
                     <div id="descricao">
-                        <p>Feito com um fio que tem um leve toque de brilho..<br>(Preço por tamanho)</p>
+                        <p>Feito com um fio que tem um leve toque de brilho..<br>(Preço por tamanho(14cm))</p>
                     </div>
-                    <h3>R$ 80,00 (14cm)</h3>
+                    <h3>R$ 80,00</h3>
                 </section>
                 <section class="cards">
                     <div class="icon"><img src="../fotos_croche/ami_jake.png" alt="dino"></div>
@@ -121,9 +121,9 @@
                     <div class="icon"><img src="../fotos_croche/ami_coelho.png" alt="dino"></div>
                     <span>Coelha Lila</span>
                     <div id="descricao">
-                        <p>Feita com fio pelúcia. Um fio super fofo e macio.<br>(Preço por tamanho)</p>
+                        <p>Feita com fio pelúcia. Um fio super fofo e macio.<br>(Preço por tamanho(30cm))</p>
                     </div>
-                    <h3>R$ 200,00(30cm)</h3>
+                    <h3>R$ 200,00</h3>
                 </section>
                 <section class="cards">
                     <div class="icon"><img src="../fotos_croche/ami_cachorro.png" alt="dino"></div>
@@ -185,7 +185,7 @@
                     <div class="icon"><img src="../fotos_croche/ami_s_azul.png" alt="dino"></div>
                     <span>Stitch</span>
                     <div id="descricao">
-                        <p>EDITAR</p>
+                        <p>EDITAR- Te amo Gab</p>
                     <h3>R$ 40,00</h3>
                 </section> 
             </div>
