--- a/bolsas/index.html
+++ b/bolsas/index.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="media-query.css">
     <link rel="stylesheet" href="../fonteees/fontes.css">
     <link rel="stylesheet" href="../editor.css">
+    <script src="java.js" defer></script>
     <link rel="shortcut icon" type="imagex/png" href="../fotos_croche/icon_Karacol.png">
 </head>
 <body>
-    <script src="java.js"></script>
     <nav id="nav-lateral">
         <div id="nav_con">
             <button class="abrir">
@@ -80,9 +80,14 @@
         <div id="logo">
             <img src="../fotos_croche/logo.png" alt="">
         </div>
+        <div class="trilho" id="trilho">
+            <div class="indicador">
+                
+            </div>
+        </div>
     </header>
     <main>
-        <div class="espaco">
+        <div class="espaco" id="espaco">
             <div class="conteudo">
                 <section class="cards">
                     <div class="icon"><img src="../fotos_croche/bolsa_bag.png" alt="gato"></div>
