--- a/bolsas/index.html
+++ b/bolsas/index.html
@@ -13,7 +13,7 @@
     <link rel="shortcut icon" type="imagex/png" href="../fotos_croche/icon_Karacol.png">
 </head>
 <body>
-    <nav id="nav-lateral">
+    <nav class="nav-lateral" id="nav-lateral">
         <div id="nav_con">
             <button class="abrir">
                 <i class="bi bi-arrow-right-short"></i>
@@ -77,12 +77,9 @@
         </nav>
         </div>
     <header>
-        <div id="logo">
-            <img src="../fotos_croche/logo.png" alt="">
-        </div>
+        <div id="logo"></div>
         <div class="trilho" id="trilho">
-            <div class="indicador">
-                
+            <div class="indicador">  
             </div>
         </div>
     </header>
