--- a/index.html
+++ b/index.html
@@ -89,19 +89,25 @@
                 <div class="slider-content">
                     <input type="radio" name="btn-radio" id="radio1">
                     <input type="radio" name="btn-radio" id="radio2">
+                    <input type="radio" name="btn-radio" id="radio3">
                     <div class="slide-box primeiro">
                         <img src="fotos_croche/foto-si 1.png" alt="">
                     </div>
                     <div class="slide-box">
                         <img src="fotos_croche/slide2.png" alt="">
                     </div>
+                    <div class="slide-box">
+                        <img src="fotos_croche/img3.png" alt="">
+                    </div>
                     <div class="nav-auto">
                         <div class="auto-btn1"></div>
                         <div class="auto-btn2"></div>
+                        <div class="auto-btn3"></div>
                     </div>
                     <div class="nav-manual">
                         <label for="radio1" class="manual-btn"></label>
                         <label for="radio2" class="manual-btn"></label>
+                        <label for="radio3" class="manual-btn"></label>
                     </div>
                 </div>
             </section>
