--- a/bolsas/index.html
+++ b/bolsas/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="media-query.css">
     <link rel="stylesheet" href="../fonteees/fontes.css">
     <link rel="stylesheet" href="../editor.css">
-    <script src="java.js" defer></script>
+    <link rel="stylesheet" href="../DarkTheme/darktheme.css">
+    <script src="../DarkTheme/darkcheck.js" defer></script>
     <link rel="shortcut icon" type="imagex/png" href="../fotos_croche/icon_Karacol.png">
 </head>
 <body>
@@ -78,10 +79,6 @@
         </div>
     <header>
         <div id="logo"></div>
-        <div class="trilho" id="trilho">
-            <div class="indicador">  
-            </div>
-        </div>
     </header>
     <main>
         <div class="espaco" id="espaco">
