--- a/contatos/index.html
+++ b/contatos/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="media-query.css">
     <link rel="stylesheet" href="../editor.css">
+    <link rel="stylesheet" href="../DarkTheme/darktheme.css">
+    <script src="../DarkTheme/darkcheck.js" defer></script>
     <link rel="shortcut icon" type="imagex/png" href="../fotos_croche/icon_Karacol.png">
 </head>
 <body>
@@ -76,7 +78,7 @@
         </div>
     <header>
         <div id="logo">
-            <img src="../fotos_croche/logo.png" alt="">
+            
         </div>
     </header>
     <main>
