--- a/roupas/index.html
+++ b/roupas/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="media-query.css">
     <link rel="stylesheet" href="../fonteees/fontes.css">
     <link rel="stylesheet" href="../editor.css">
+    <link rel="stylesheet" href="../DarkTheme/darktheme.css">
+    <script src="../DarkTheme/darkcheck.js" defer></script>
     <link rel="shortcut icon" type="imagex/png" href="../fotos_croche/icon_Karacol.png">
 </head>
 <body>
@@ -78,7 +80,6 @@
         </div>
     <header>
         <div id="logo">
-            <img src="../fotos_croche/logo.png" alt="">
         </div>
     </header>
     <main>
