--- a/amigurumi/index.html
+++ b/amigurumi/index.html
@@ -177,7 +177,7 @@
                     <div class="icon"><img src="../fotos_croche/ami_s_rosa.png" alt="dino"></div>
                     <span>Stitch Rosa</span>
                     <div id="descricao">
-                        <p>EDITAR</p>
+                        <p>Personagem ficticio criado apartir do filme "Lilo e Stitch" da Disney, feito com fio ecologico.(<strong>IMAGEM ILUSTRATIVA</strong>)<br>(Preço por tamanho(10cm))</p>
                     </div>
                     <h3>R$ 40,00</h3>
                 </section> 
@@ -185,7 +185,7 @@
                     <div class="icon"><img src="../fotos_croche/ami_s_azul.png" alt="dino"></div>
                     <span>Stitch</span>
                     <div id="descricao">
-                        <p>EDITAR- Te amo Gab</p>
+                        <p>Personagem do filme "Lilo e Stitch" da Disney, feito com Fio ecologico. (<strong>IMAGEM ILUSTRATIVA</strong>)<br>(Preço por tamanho(10cm))</p>
                     <h3>R$ 40,00</h3>
                 </section> 
             </div>
