--- a/fonteees/index.html
+++ b/fonteees/index.html
@@ -7,29 +7,29 @@
     <link rel="stylesheet" href="../fonteees/fontes.css">
 </head>
 <body>
-    <p class="texto">Mor, qualquer coisa, so para ver a fonte.</p>
-    <p class="texto">Mor, qualquer coisa, so para ver a fonte.</p>
-    <p class="texto">Mor, qualquer coisa, so para ver a fonte.</p>
-    <p class="texto">Mor, qualquer coisa, so para ver a fonte.</p>
-    <p class="texto">Mor, qualquer coisa, so para ver a fonte.</p>
-    <p class="texto">Mor, qualquer coisa, so para ver a fonte.</p>
-    <p class="texto">Mor, qualquer coisa, so para ver a fonte.</p>
-    <p class="texto">Mor, qualquer coisa, so para ver a fonte.</p>
-    <p class="texto">Mor, qualquer coisa, so para ver a fonte.</p>
-    <p class="texto">"Mor, qualquer coisa, so para ver a fonte.</p>
-    <p class="texto">Mor, qualquer coisa, so para ver a fonte.</p>
-    <p class="texto">Mor, qualquer coisa, so para ver a fonte.</p>
-    <p class="texto">Mor, qualquer coisa, so para ver a fonte.</p>
-    <p class="texto">Mor, qualquer coisa, so para ver a fonte.</p>
-    <p class="texto">Mor, qualquer coisa, so para ver a fonte.</p>
-    <p class="texto">Mor, qualquer coisa, so para ver a fonte.</p>
-    <p class="texto">Mor, qualquer coisa, so para ver a fonte.</p>
-    <p class="texto">Mor, qualquer coisa, so para ver a fonte.</p>
-    <p class="texto">Mor, qualquer coisa, so para ver a fonte.</p>
-    <p class="texto">Mor, qualquer coisa, so para ver a fonte.</p>
-    <p class="texto">Mor, qualquer coisa, so para ver a fonte.</p>
-    <p class="texto">Mor, qualquer coisa, so para ver a fonte.</p>
-    <p class="texto">Mor, qualquer coisa, so para ver a fonte.</p>
+    <p class="texto">Mor, qualquer coisa, so para ver a fonte. (1-bubbly)</p>
+    <p class="texto">Mor, qualquer coisa, so para ver a fonte.(2-buydog)</p>
+    <p class="texto">Mor, qualquer coisa, so para ver a fonte.(3-cherry)</p>
+    <p class="texto">Mor, qualquer coisa, so para ver a fonte.(4-cookie)</p>
+    <p class="texto">Mor, qualquer coisa, so para ver a fonte.(5-cute)</p>
+    <p class="texto">Mor, qualquer coisa, so para ver a fonte.(6-game)</p>
+    <p class="texto">Mor, qualquer coisa, so para ver a fonte.(7-futura)</p>
+    <p class="texto">Mor, qualquer coisa, so para ver a fonte.(8-hact)</p>
+    <p class="texto">Mor, qualquer coisa, so para ver a fonte.(9-katto)</p>
+    <p class="texto">"Mor, qualquer coisa, so para ver a fonte.(10-kinder)</p>
+    <p class="texto">Mor, qualquer coisa, so para ver a fonte.(11-lemon )</p>
+    <p class="texto">Mor, qualquer coisa, so para ver a fonte.(12-mix)</p>
+    <p class="texto">Mor, qualquer coisa, so para ver a fonte.(17-pw)</p>
+    <p class="texto">Mor, qualquer coisa, so para ver a fonte.(18-sugar)</p>
+    <p class="texto">Mor, qualquer coisa, so para ver a fonte.(19-vertical)</p>
+    <p class="texto">Mor, qualquer coisa, so para ver a fonte.(20-comic)</p>
+    <p class="texto">Mor, qualquer coisa, so para ver a fonte.(21-easy)</p>
+    <p class="texto">Mor, qualquer coisa, so para ver a fonte.(22-grande)</p>
+    <p class="texto">Mor, qualquer coisa, so para ver a fonte.(23-stone)</p>
+    <p class="texto">Mor, qualquer coisa, so para ver a fonte.(1-bubbly)</p>
+    <p class="texto">Mor, qualquer coisa, so para ver a fonte.(1-bubbly)</p>
+    <p class="texto">Mor, qualquer coisa, so para ver a fonte.(1-bubbly)</p>
+    <p class="texto">Mor, qualquer coisa, so para ver a fonte.(1-bubbly)/p>
 
 </body>
 </html>
