--- a/index.html
+++ b/index.html
@@ -119,31 +119,26 @@
             </section>
         </div>
         <br>
+        <!--AQUI ABAIXO SE EDITA AS NOTICIAS-->
         <div class="noticias">
             <div class="titulo">
-                <h1>Rapaz deu certo memo</h1>
+                <h1>LANÇAMENTO DA PRIMEIRA VERSÃO DO SITE KARACOL CROCHE</h1>
             </div>
+            
             <div class="conteudo">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae explicabo soluta commodi, deleniti placeat a saepe neque, incidunt adipisci ipsa blanditiis molestias impedit quia quo dolores mollitia eveniet nam illo.</p>
-            </div>
-        </div>
-        <div class="noticias">
-            <div class="titulo">
-                <h1>Ficou massa hein</h1>
-            </div>
-            <div class="conteudo">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae explicabo soluta commodi, deleniti placeat a saepe neque, incidunt adipisci ipsa blanditiis molestias impedit quia quo dolores mollitia eveniet nam illo.</p>
-            </div>
-        </div>
-        <div class="noticias">
-            <div class="titulo">
-                <h1>EU TE AMOOOO</h1>
-            </div>
-            <div class="conteudo">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae explicabo soluta commodi, deleniti placeat a saepe neque, incidunt adipisci ipsa blanditiis molestias impedit quia quo dolores mollitia eveniet nam illo.</p>
+                <p>&nbsp; &nbsp; &nbsp; &nbsp;&Eacute; com muito orgulho que lan&ccedil;amos e disponibilizamos a&nbsp;<strong>PRIMEIRA </strong><strong>VERS&Atilde;O&nbsp;</strong>do nosso site KARACOL CROCHE. Esse site est&aacute; longe de ser um site de compras e vendas online com entregas e etc. mas &eacute; um bom come&ccedil;o para apenas dois jovens sonhadores.</p>
+                <p>&nbsp; &nbsp; &nbsp; &nbsp;Este site ent&atilde;o estar&aacute; mais focado mais em visualiza&ccedil;&atilde;o do que em compras e vendas, mas &eacute; claro que se vo&ccedil;&ecirc; for da regi&atilde;o proxima podemos conversar melhor sobre entregas em algum de nossos contatos na guia, contatos :D.</p>
+                <p>&nbsp;</p>
+                <p>Seja bem vindo(a) ao nosso site</p>
+                <p>&nbsp;</p>
+                <p style="text-align: center;"><strong>KARACOL CROCHE</strong></p>
+                <p style="text-align: center;">&nbsp;</p>
+                <p style="text-align: right;"><strong>Agradecimentos especias</strong></p>
+                <p style="text-align: right;">a designer do site: Karolaine Beca</p>
+                <p style="text-align: right;">e ao programador: Gabriel Oliveira</p>
             </div>
         </div>
     </div>
-    <!-- <3 -->
+    <!-- MUITO OBRIGADA MEU AMOR <3 -->
 </body>
 </html>
