--- a/roupas/index.html
+++ b/roupas/index.html
@@ -89,15 +89,15 @@
                     <div class="icon"><img src="../fotos_croche/roupa_top.png" alt="gato"></div>
                     <span>Bolero Florido</span>
                     <div id="descricao">
-                        <p></p>
+                        <p>Feito com barbante 6, este bolero é otimo para você amante de flores.<BR>(<strong>INFORME SUAS MEDIDAS</strong>)</p>
                     </div>
-                    <h3>R$ 500,00</h3>
+                    <h3>R$ 90,00</h3>
                 </section>
                 <section class="cards">
                     <div class="icon"><img src="../fotos_croche/roupa_vestido.png" alt="caquin"></div>
                     <span>Saida de Praia/Vestido</span>
                     <div id="descricao">
-                        <p>Feito com barbante 6. Este vestido/saida contem uma otima modelagem para o corpo.(Informe suas medidas)  </p>
+                        <p>Feito com barbante 6. Este vestido/saida contem uma otima modelagem para o corpo.<BR>(<strong>INFORME SUAS MEDIDAS</strong>)  </p>
                     </div>
                     <h3>R$ 230,00</h3>
                 </section>
