--- a/index.html
+++ b/index.html
@@ -126,16 +126,16 @@
             </div>
             
             <div class="conteudo">
-                <p>&nbsp; &nbsp; &nbsp; &nbsp;&Eacute; com muito orgulho que lan&ccedil;amos e disponibilizamos a&nbsp;<strong>PRIMEIRA </strong><strong>VERS&Atilde;O&nbsp;</strong>do nosso site KARACOL CROCHE. Esse site est&aacute; longe de ser um site de compras e vendas online com entregas e etc. mas &eacute; um bom come&ccedil;o para apenas dois jovens sonhadores.</p>
-                <p>&nbsp; &nbsp; &nbsp; &nbsp;Este site ent&atilde;o estar&aacute; mais focado mais em visualiza&ccedil;&atilde;o do que em compras e vendas, mas &eacute; claro que se vo&ccedil;&ecirc; for da regi&atilde;o proxima podemos conversar melhor sobre entregas em algum de nossos contatos na guia, contatos :D.</p>
+                <p>&nbsp; &nbsp; &nbsp; &Eacute; com muito orgulho que lan&ccedil;amos e disponibilizamos a&nbsp;<strong>PRIMEIRA&nbsp;</strong><strong>VERS&Atilde;O&nbsp;</strong>do nosso site KARACOL CROCH&Ecirc;. Esse site est&aacute; longe de ser um site de compras e vendas online com entregas, etc., mas &eacute; um bom come&ccedil;o para apenas dois jovens sonhadores.</p>
+                <p>&nbsp; &nbsp; &nbsp; &nbsp;Este site ent&atilde;o estar&aacute; mais focado em visualiza&ccedil;&atilde;o do que em compras e vendas, mas &eacute; claro que se voc&ecirc; for da regi&atilde;o pr&oacute;xima, podemos conversar melhor sobre entregas em algum de nossos contatos na guia, contatos :D.</p>
                 <p>&nbsp;</p>
-                <p>Seja bem vindo(a) ao nosso site</p>
+                <p>Seja bem-vindo(a) ao nosso site.</p>
                 <p>&nbsp;</p>
-                <p style="text-align: center;"><strong>KARACOL CROCHE</strong></p>
-                <p style="text-align: center;">&nbsp;</p>
-                <p style="text-align: right;"><strong>Agradecimentos especias</strong></p>
-                <p style="text-align: right;">a designer do site: Karolaine Beca</p>
-                <p style="text-align: right;">e ao programador: Gabriel Oliveira</p>
+                <p style="text-align: center;"><strong>KARACOL CROCH&Ecirc;</strong></p>
+                <p>&nbsp;</p>
+                <p style="text-align: right;"><strong>Agradecimentos especiais.</strong></p>
+                <p style="text-align: right;">A designer do site: Karolaine Beca.</p>
+                <p style="text-align: right;">E ao programador: Gabriel Oliveira.</p>
             </div>
         </div>
     </div>
