--- a/fonteees/index.html
+++ b/fonteees/index.html
@@ -19,6 +19,10 @@
     <p class="texto">"Mor, qualquer coisa, so para ver a fonte.(10-kinder)</p>
     <p class="texto">Mor, qualquer coisa, so para ver a fonte.(11-lemon )</p>
     <p class="texto">Mor, qualquer coisa, so para ver a fonte.(12-mix)</p>
+    <p class="texto">Mor, qualquer coisa, so para ver a fonte.(13-monday)</p>
+    <p class="texto">Mor, qualquer coisa, so para ver a fonte.(14-sugar)</p>
+    <p class="texto">Mor, qualquer coisa, so para ver a fonte.(15-pat1)</p>
+    <p class="texto">Mor, qualquer coisa, so para ver a fonte.(16-pat2)</p>
     <p class="texto">Mor, qualquer coisa, so para ver a fonte.(17-pw)</p>
     <p class="texto">Mor, qualquer coisa, so para ver a fonte.(18-sugar)</p>
     <p class="texto">Mor, qualquer coisa, so para ver a fonte.(19-vertical)</p>
@@ -26,10 +30,6 @@
     <p class="texto">Mor, qualquer coisa, so para ver a fonte.(21-easy)</p>
     <p class="texto">Mor, qualquer coisa, so para ver a fonte.(22-grande)</p>
     <p class="texto">Mor, qualquer coisa, so para ver a fonte.(23-stone)</p>
-    <p class="texto">Mor, qualquer coisa, so para ver a fonte.(1-bubbly)</p>
-    <p class="texto">Mor, qualquer coisa, so para ver a fonte.(1-bubbly)</p>
-    <p class="texto">Mor, qualquer coisa, so para ver a fonte.(1-bubbly)</p>
-    <p class="texto">Mor, qualquer coisa, so para ver a fonte.(1-bubbly)/p>
 
 </body>
 </html>
