--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="media-query.css">
-    <link rel="stylesheet" href="fontes.css">
+    <link rel="stylesheet" href="fonteees/fontes.css">
     <link rel="stylesheet" href="editor.css">
     <link rel="stylesheet" href="slide.css">
     <link rel="stylesheet" href="DarkTheme/darktheme.css">
@@ -126,7 +126,7 @@
             </div>
             
             <div class="conteudo">
-               <p>&Eacute; com muito orgulho que lan&ccedil;amos e disponibilizamos a&nbsp;<strong>PRIMEIRA&nbsp;</strong><strong>VERS&Atilde;O&nbsp;</strong>do nosso site KARACOL CROCH&Ecirc;. Esse site est&aacute; longe de ser um site de compras e vendas online com entregas, etc., mas &eacute; um bom come&ccedil;o para apenas dois jovens sonhadores.</p>
+               <p>&nbsp; &nbsp; &nbsp; &nbsp;&Eacute; com muito orgulho que lan&ccedil;amos e disponibilizamos a&nbsp;<strong>PRIMEIRA&nbsp;</strong><strong>VERS&Atilde;O&nbsp;</strong>do nosso site KARACOL CROCH&Ecirc;. Esse site est&aacute; longe de ser um site de compras e vendas online com entregas, etc., mas &eacute; um bom come&ccedil;o para apenas dois jovens sonhadores.</p>
                <p>&nbsp; &nbsp; &nbsp; &nbsp;Este site ent&atilde;o estar&aacute; mais focado em visualiza&ccedil;&atilde;o do que em compras e vendas, mas &eacute; claro que se voc&ecirc; for da regi&atilde;o pr&oacute;xima, podemos conversar melhor sobre entregas em algum de nossos contatos na guia, contatos :D.</p>
                <p>&nbsp;</p>
                <p>Seja bem-vindo(a) ao nosso site.</p>
@@ -138,6 +138,12 @@
                <p style="text-align: right;">E ao programador: Gabriel Oliveira.</p>
                <p style="text-align: right;">&nbsp;</p>
                <h6 style="text-align: right;"><em>Data de publica&ccedil;&atilde;o: 01/05/2024</em></h6>
+            </div>
+            <div class="titulo">
+                <h1>VIDEOS</h1>
+            </div>
+            <div class="conteudo">
+                <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@karacol_croche/video/7364066806606155014" data-video-id="7364066806606155014" style="max-width: 0px;min-width: 325px;" > <section> <a target="_blank" title="♬ i like the way you kiss me - Artemas" href="https://www.tiktok.com/music/i-like-the-way-you-kiss-me-7347941873543890946?refer=embed">♬ i like the way you kiss me - Artemas</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
             </div>
         </div>
     </div>
