--- a/amigurumi/index.html
+++ b/amigurumi/index.html
@@ -83,8 +83,8 @@
         </div>
     </header>
     <main>
-        <div class="espaco">
-            <div class="conteudo">
+        <div class="espaco" id="espaco">
+            <div class="conteudo" id="conteudo">
                 <section class="cards">
                     <div class="icon"><img src="../fotos_croche/ami_gata.png" alt="almofagata"></div>
                     <span>Almofagata</span>
