--- a/fonteees/index.html
+++ b/fonteees/index.html
@@ -30,6 +30,8 @@
     <p class="texto">Mor, qualquer coisa, so para ver a fonte.(21-easy)</p>
     <p class="texto">Mor, qualquer coisa, so para ver a fonte.(22-grande)</p>
     <p class="texto">Mor, qualquer coisa, so para ver a fonte.(23-stone)</p>
+    <p class="texto">Mor, qualquer coisa, so para ver a fonte.(24-heyam)</p>
+    <p class="texto">Mor, qualquer coisa, so para ver a fonte.(25-tell)</p>
 
 </body>
 </html>
