--- a/index.html
+++ b/index.html
@@ -82,10 +82,9 @@
         </div>
     <header>
         <div class="logo" id="logo">
-
         </div>
         <div class="trilho" id="trilho">
-            <div class="indicador" onclick="dark()">  
+            <div class="indicador">  
             </div>
         </div>
     </header>
@@ -122,11 +121,11 @@
         <!--AQUI ABAIXO SE EDITA AS NOTICIAS-->
         <div class="noticias">
             <div class="titulo">
-                <h1>LANÇAMENTO DA PRIMEIRA VERSÃO DO SITE KARACOL CROCHE</h1>
+                <h1>LANCAMENTO DA PRIMEIRA VERSAO DO SITE KARACOL CROCHE</h1>
             </div>
             
             <div class="conteudo">
-               <p>&nbsp; &nbsp; &nbsp; &nbsp;&Eacute; com muito orgulho que lan&ccedil;amos e disponibilizamos a&nbsp;<strong>PRIMEIRA&nbsp;</strong><strong>VERS&Atilde;O&nbsp;</strong>do nosso site KARACOL CROCH&Ecirc;. Esse site est&aacute; longe de ser um site de compras e vendas online com entregas, etc., mas &eacute; um bom come&ccedil;o para apenas dois jovens sonhadores.</p>
+               <p>&nbsp; &nbsp; &nbsp; &nbsp;&Eacute; com muito orgulho que lan&ccedil;amos e disponibilizamos a&nbsp;<strong>PRIMEIRA&nbsp;</strong><strong>VERS&Atilde;O&nbsp;</strong>do nosso site KARACOL CROCH&Ecirc;. Esse site est&aacute; longe de ser um site de compras e vendas online com entregas, etc.. Mas &eacute; um bom come&ccedil;o para apenas dois jovens sonhadores.</p>
                <p>&nbsp; &nbsp; &nbsp; &nbsp;Este site ent&atilde;o estar&aacute; mais focado em visualiza&ccedil;&atilde;o do que em compras e vendas, mas &eacute; claro que se voc&ecirc; for da regi&atilde;o pr&oacute;xima, podemos conversar melhor sobre entregas em algum de nossos contatos na guia, contatos :D.</p>
                <p>&nbsp;</p>
                <p>Seja bem-vindo(a) ao nosso site.</p>
