--- a/contatos/index.html
+++ b/contatos/index.html
@@ -80,6 +80,9 @@
         <div id="logo">
             
         </div>
+        <div class="copy">
+            <p>&copy; 2024 Karacol Crochê</p>
+        </div>
     </header>
     <main>
         <div id="fundo">
