--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
     <header>
         <div class="logo" id="logo">
         </div>
+        <div class="copy">
+            <p>&copy; 2024 Karacol Crochê</p>
+        </div>
         <div class="trilho" id="trilho">
             <div class="indicador">  
             </div>
