--- a/bolsas/index.html
+++ b/bolsas/index.html
@@ -79,6 +79,9 @@
         </div>
     <header>
         <div id="logo"></div>
+        <div class="copy">
+            <p>&copy; 2024 Karacol Crochê</p>
+        </div>
     </header>
     <main>
         <div class="espaco" id="espaco">
