--- a/chaveiros/index.html
+++ b/chaveiros/index.html
@@ -81,6 +81,9 @@
     <header>
         <div id="logo">
         </div>
+        <div class="copy">
+            <p>&copy; 2024 Karacol Crochê</p>
+        </div>
     </header>
     <main>
         <div class="espaco" id="espaco">
