--- a/chaveiros/index.html
+++ b/chaveiros/index.html
@@ -112,6 +112,14 @@
                     </div>
                     <h3>R$ 17,00</h3>
                 </section>
+                <section class="cards">
+                    <div class="icon"><img src="../fotos_croche/cha_flor.png" alt="flor"></div>
+                    <span>Tulipas</span>
+                    <div id="descricao">
+                        <p>Feito com fio ecológico, lindas florzinhas para presentear.<br>(Aceito cores diferentes.<br>Preço por unidade)</p>
+                    </div>
+                    <h3>R$ 10,00</h3>
+                </section>
                 
             </div>
         </div>
