--- a/index.html
+++ b/index.html
@@ -144,14 +144,14 @@
                <h6 style="text-align: right;"><em>Data de publica&ccedil;&atilde;o: 01/05/2024</em></h6>
             </div>
             <div class="titulo">
-                <h1>VIDEOS</h1>
+                <h1>Dias Das Maes</h1>
             </div>
             <div class="conteudo">
-                <video controls src="videos/video1.mp4">
-                </video>
+                <img src="../KaracolCroche/fotos_croche/diadasmaes.png" alt="dia">
             </div>
         </div>
     </div>
+    <!--<video controls src="videos/video1.mp4">-->
     <!-- MUITO OBRIGADA MEU AMOR <3 -->
 </body>
 </html>
